--- a/src/clovertun/clovertun.vcxproj
+++ b/src/clovertun/clovertun.vcxproj
@@ -11,8 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ikcp.c" />
-    <ClCompile Include="KCPClient.cpp" />
+    <ClCompile Include="ENetClient.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="P2PClient.cpp" />
     <ClCompile Include="P2PConnection.cpp" />
@@ -29,8 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\clovertun\P2PProtocol.h" />
-    <ClInclude Include="ikcp.h" />
-    <ClInclude Include="KCPClient.h" />
+    <ClInclude Include="ENetClient.h" />
     <ClInclude Include="P2PClient.h" />
     <ClInclude Include="P2PConnection.h" />
     <ClInclude Include="P2PGuest.h" />
@@ -100,14 +98,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
-      <AdditionalIncludeDirectories>$(SolutionDir)include/BaseObject;$(SolutionDir)include/clovertun;$(SolutionDir)include/corelib</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include/BaseObject;$(SolutionDir)include/clovertun;$(SolutionDir)include/corelib;$(SolutionDir)3rdparty/enet/enet-1.3.15/include</AdditionalIncludeDirectories>
       <TreatWarningAsError>false</TreatWarningAsError>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>enet.lib;winmm.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/3rdparty/enet/enet-1.3.15/Release</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
